--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,10 +75,12 @@
     <string name="msn_duplicate_property_name">Ya hay un molde con este Nombre</string>
     <string name="msn_duplicate_property_ref">Ya hay un molde con esta Referencia</string>
     <string name="msn_img_select">Selecciona imagen</string>
-    <string name="msn_img_delete">Imagen eliminada.</string>
+    <string name="tot_del_img">Imagen eliminada.</string>
+    <string name="tot_upd_molde">Molde Actualizado</string>
+    <string name="tot_new_molde">Molde creado</string>
+    <string name="tot_del_molde">Molde eliminado</string>
+    <string name="tot_upd_maquina">Maquina Actualizada</string>
     <string name="msn_img">img</string>
-    <string name="msn_upd_molde_ok">Molde Actualizado</string>
-    <string name="msn_del_molde_ok">Molde eliminado</string>
     <string name="msn_delete1">Se ELIMINARAN</string>
     <string name="msn_delete2">configuracion/es.</string>
     <string name="msn_delete3">\n\nCuando eliminamos un molde o una maquina, también se eliminan las configuraciones donde aparezcan.</string>
@@ -88,8 +90,14 @@
     <string name="dialog_empty_fields">Campos Vacíos</string>
     <string name="dialog_confirm">Si estoy de acuerdo.</string>
     <string name="dialog_del_molde">Eliminando Molde</string>
-    <string name="log_tag_delete">Error al eliminar entidad.</string>
+    <string name="tag_dao_error">Error en Dao</string>
+    <string name="tag_img_error">Error en Img</string>
+    <string name="log_new_molde">MoldeDao.insert</string>
     <string name="log_del_molde">MoldeDao.delete</string>
+    <string name="log_del_maquina">Maquina.delete</string>
+    <string name="log_upd_maquina">Maquina.update</string>
+    <string name="log_del_img_molde">Error eliminar imagen molde</string>
+    <string name="log_del_img_maquina">Error eliminar imagen maquina</string>
     <string name="cont_desc_fab_nav_update">Fab nav editar</string>
     <string name="cont_desc_fab_nav_delete">Fab nav eliminar</string>
     <string name="cont_desc_fab_nav_back">Fab nav atrás</string>
