--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,21 +70,19 @@
     <string name="property_exp_pos1">Pos 1</string>
     <string name="property_exp_pos2">Pos 2</string>
     <string name="msn_ok">OK</string>
-    <string name="msn_empty_property_name">El campo Nombre es obligatorio</string>
-    <string name="msn_empty_property_ref">El campo Referencia es obligatorio</string>
     <string name="msn_duplicate_property_name">Ya hay un molde con este Nombre</string>
     <string name="msn_duplicate_property_ref">Ya hay un molde con esta Referencia</string>
     <string name="msn_img_select">Selecciona imagen</string>
-    <string name="tot_del_img">Imagen eliminada.</string>
     <string name="tot_upd_molde">Molde Actualizado</string>
     <string name="tot_new_molde">Molde creado</string>
     <string name="tot_del_molde">Molde eliminado</string>
+    <string name="tot_new_maquina">Maquina creada</string>
     <string name="tot_upd_maquina">Maquina Actualizada</string>
+    <string name="tot_del_maquina">Maquina Eliminada</string>
     <string name="msn_img">img</string>
     <string name="msn_delete1">Se ELIMINARAN</string>
     <string name="msn_delete2">configuracion/es.</string>
     <string name="msn_delete3">\n\nCuando eliminamos un molde o una maquina, también se eliminan las configuraciones donde aparezcan.</string>
-    <string name="msn_delete_maquina">Eliminando Maquina</string>
     <string name="msn_default_value">Los campos en rojo tomarán valores por defecto.</string>
     <string name="msn_update_empty">No puede haber campos vacíos al actualizar.\nLos campos en rojo deben tener valor.</string>
     <string name="dialog_empty_fields">Campos Vacíos</string>
@@ -94,8 +92,10 @@
     <string name="tag_img_error">Error en Img</string>
     <string name="log_new_molde">MoldeDao.insert</string>
     <string name="log_del_molde">MoldeDao.delete</string>
-    <string name="log_del_maquina">Maquina.delete</string>
-    <string name="log_upd_maquina">Maquina.update</string>
+    <string name="log_new_maquina">MaquinaDao.insert</string>
+    <string name="log_del_maquina">MaquinaDao.delete</string>
+    <string name="log_upd_maquina">MaquinaDao.update</string>
+    <string name="log_del_img">Imagen eliminada.</string>
     <string name="log_del_img_molde">Error eliminar imagen molde</string>
     <string name="log_del_img_maquina">Error eliminar imagen maquina</string>
     <string name="cont_desc_fab_nav_update">Fab nav editar</string>
