Nuevo repository y nuevos check, y mucho mas...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,28 +80,24 @@
     <string name="tot_new_maquina">Maquina creada</string>
     <string name="tot_upd_maquina">Maquina Actualizada</string>
     <string name="tot_del_maquina">Maquina Eliminada</string>
+    <string name="tot_del_img">Imagen eliminada.</string>
     <string name="tot_new_config">Configuracion creada.</string>
     <string name="tot_upd_config">Configuracion actualizada.</string>
     <string name="msn_img">img</string>
-    <string name="msn_delete1">Se ELIMINARAN</string>
+    <string name="msn_delete1">Se ELIMINARAN </string>
     <string name="msn_delete2">configuracion/es.</string>
     <string name="msn_delete3">\n\nCuando eliminamos un molde o una maquina, también se eliminan las configuraciones donde aparezcan.</string>
     <string name="msn_default_value">Los campos en rojo tomarán valores por defecto.</string>
     <string name="msn_update_empty">No puede haber campos vacíos al actualizar.\nLos campos en rojo deben tener valor.</string>
     <string name="dialog_empty_fields">Campos Vacíos</string>
+    <string name="alert_title_aviso">Aviso!.</string>
+    <string name="alert_del_molde">Se eliminará el Molde de forma permanente.</string>
     <string name="alert_confirm">Si estoy de acuerdo.</string>
     <string name="alert_ok">OK</string>
+    <string name="alert_no">No</string>
     <string name="alert_title_error">ERROR</string>
     <string name="alert_new_molde">Fallo inesperado al crear nuevo molde./nIntentelo de nuevo más tarde.</string>
     <string name="alert_new_maquina">Fallo inesperado al crear nueva maquina./nIntentelo de nuevo más tarde.</string>
-    <string name="tag_dao_error">Error en Dao</string>
-    <string name="tag_img_error">Error en Img</string>
-    <string name="log_del_molde">MoldeDao.delete</string>
-    <string name="log_del_maquina">MaquinaDao.delete</string>
-    <string name="log_upd_maquina">MaquinaDao.update</string>
-    <string name="log_del_img">Imagen eliminada.</string>
-    <string name="log_del_img_molde">Error eliminar imagen molde</string>
-    <string name="log_del_img_maquina">Error eliminar imagen maquina</string>
     <string name="cont_desc_fab_nav_update">Fab nav editar</string>
     <string name="cont_desc_fab_nav_delete">Fab nav eliminar</string>
     <string name="cont_desc_fab_nav_back">Fab nav atrás</string>
