--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">chikidesk</string>
+    <string name="app_name">Chiki Pichurri</string>
     <string name="btn_text_moldes">Moldes</string>
     <string name="btn_text_maquinas">Maquinas</string>
     <string name="btn_text_si">Si</string>
